<resources>
    <string name="app_name">partVisit</string>
    <string name="label_app_name">پارت ویزیت</string>
    <string name="label_product_group">گروه کالا</string>
    <string name="label_product_catalog">کاتالوگ کالا</string>
    <string name="label_orders">سفارشات</string>
    <string name="label_register_order">ثبت سفارش</string>
    <string name="label_reports">گزارشات</string>
    <string name="label_customers">مشتریان</string>
    <string name="label_setting">تنظیمات</string>
    <string name="label_receiving_data">دریافت اطلاعات</string>
    <string name="label_sending_data">ارسال اطلاعات</string>
    <string name="label_version">نســخه</string>
    <string name="label_register_send_track_order">ثــبت ، ارســال سفــارش</string>
    <string name="label_login">ورود</string>
    <string name="label_confirm">تایید</string>
    <string name="label_retry">تلاش مجدد</string>
    <string name="label_star">*</string>
    <string name="label_no">خیر</string>
    <string name="label_ok">بله</string>
    <string name="label_logout">خروج از حساب کاربری</string>
    <string name="label_sent_orders">سفارشات ارسال شده</string>
    <string name="label_current_day_orders">سفارشات روز جاری</string>
    <string name="label_draft_orders">سفارشات پیش نویس</string>
    <string name="label_unsent_orders">سفارشات ارسال نشده</string>
    <string name="label_date_item">تاریخ:</string>
    <string name="label_number">تعداد:</string>
    <string name="label_number_units">تعداد واحد:</string>
    <string name="label_number_packing">تعداد بسته:</string>
    <string name="label_order_number">شماره سفارش:</string>
    <string name="label_order_draft_number">شماره پیش نویس:</string>
    <string name="label_agent">نماینده:</string>
    <string name="label_customer_list">لیست مشتریان</string>
    <string name="label_direction_list">لیست مسیر ها</string>
    <string name="label_order_list">لیست سفارشات</string>
    <string name="label_filter_order">فیلتر سفارشات</string>
    <string name="label_delete_filter">حذف فیلتر</string>
    <string name="label_customer_name">نام مشتری:</string>
    <string name="label_customer">مشتری:</string>
    <string name="label_direction">مسیر:</string>
    <string name="label_customer_direction">مسیر مشتری:</string>
    <string name="label_invoice_category">گروه صورتحساب:</string>
    <string name="label_customer_detail">جزییات مشتری</string>
    <string name="label_customer_information">اطلاعات مشتری:</string>
    <string name="label_customer_name_star">نام مشتری * :</string>
    <string name="label_customer_phone_star">شماره همراه مشتری * :</string>
    <string name="label_call_phone">شماره تماس:</string>
    <string name="label_add_customer">افزودن مشتری</string>
    <string name="label_edit_customer">ویرایش مشتری</string>
    <string name="label_add_product">افزودن محصول</string>
    <string name="label_edit_product">ویرایش محصول</string>
    <string name="label_customer_search">جستجو مشتری ...</string>
    <string name="label_direction_search">جستجو مسیر ...</string>
    <string name="label_order_search">جستجو سفارش ...</string>
    <string name="label_phone">تلفن:</string>
    <string name="label_address">آدرس:</string>
    <string name="label_date_time">تاریخ و زمان:</string>
    <string name="label_header_order">هدر سفارش</string>
    <string name="label_total_order">مبلغ سفارش:</string>
    <string name="label_final_factor">مبلغ نهایی:</string>
    <string name="label_sum_discount_price">جمع تخفیفات:</string>
    <string name="label_sum_price">جمع کل:</string>
    <string name="label_sum_vat">جمع مالیات:</string>
    <string name="label_product_detail">جزییات محصول</string>
    <string name="label_product_information">اطلاعات محصول :</string>
    <string name="label_description">توضیحات</string>
    <string name="label_product_description">توضیحات محصول :</string>
    <string name="label_unit_name">واحد:</string>
    <string name="label_no_packing">بدون بسته‌بندی</string>
    <string name="label_rate">نرخ:</string>
    <string name="label_total">جمع</string>
    <string name="label_discount">تخفیف</string>
    <string name="label_amount_1">مقدار1</string>
    <string name="label_amount_2">مقدار 2</string>
    <string name="label_product_name_header">نام محصول</string>
    <string name="label_product_name">نام کالا :</string>
    <string name="label_product">کالا:</string>
    <string name="label_product_search">جستجو محصولات ...</string>
    <string name="label_products">محصولات</string>
    <string name="label_close">بستن</string>
    <string name="label_save">ذخیره</string>
    <string name="label_dark_mode">حالت تیره</string>
    <string name="label_user_name">نام کاربری</string>
    <string name="label_user_name_item">نام کاربری:</string>
    <string name="label_password">رمز عبور</string>
    <string name="label_date">تاریخ:</string>
    <string name="label_from_date">از تاریخ:</string>
    <string name="label_to_date">تا تاریخ:</string>
    <string name="label_duo_date">تاریخ سررسید:</string>
    <string name="label_delivery_date">تاریخ تحویل:</string>
    <string name="label_continue">ادامه</string>
    <string name="label_order_detail">جزییات سفارش</string>
    <string name="label_total_discount">جمع تخفیف:</string>
    <string name="label_discount_order">تخفیف فاکتور:</string>
    <string name="label_total_price">قابل پرداخت:</string>
    <string name="label_view_order">مشاهده سفارش</string>
    <string name="label_send_order">ثبت و ارسال نهایی سفارش</string>
    <string name="label_send_online_order">ارسال آنلاین سفارش</string>
    <string name="label_draft_order">پیش نویس سفارش</string>
    <string name="label_draft_order_item">سفارش پیش نویس</string>
    <string name="label_edit_order">ویرایش سفارش</string>
    <string name="label_order_description">توضیحات سفارش...</string>
    <string name="label_apply_discount">اعمال تخفیف</string>
    <string name="label_select_discount">انتخاب تخفیف</string>
    <string name="label_choose">انتخاب کنید</string>
    <string name="label_sales_plan">طرح فروش:</string>
    <string name="label_Resolution">مصوبه:</string>
    <string name="label_payment_type">نحوه تسویه:</string>
    <string name="label_cancel">لغو</string>
    <string name="label_register">ثبت</string>
    <string name="label_packing_type">نوع بسته بندی: </string>
    <string name="app_price_item">12000ریال</string>
    <string name="label_sync_order">ارسال سفارش</string>
    <string name="label_sync_all_order">ارسال همه سفارشات</string>
    <string name="label_please_select">لطفا انتخاب کنید</string>
    <string name="label_server_setting">تنظیمات سرور</string>
    <string name="label_equivalent">معادل</string>
    <string name="label_update">آپدیت</string>
    <string name="label_back">بازگشت</string>
    <string name="label_attention">توجه</string>
    <string name="label_understand">متوجه شدم</string>
    <string name="label_remove_cache">پاک کردن داده</string>
    <string name="label_warning">هشدار</string>
    <string name="label_cancellation">انصراف</string>
    <string name="label_open_setting">باز کردن تنظیمات</string>
    <string name="label_validate_credit">در حال بررسی اعتبار...</string>
    <string name="label_select_all">انتخاب همه</string>
    <string name="label_receive_update_information">دریافت و به روز رسانی اطلاعات</string>
    <string name="label_location_off">لوکیشن خاموش است!</string>
    <string name="picker_announce_current_selection">Current selection: %1$s</string>
    <string name="picker_date_header_selected">%1$s</string>
    <string name="picker_date_header_title">یک تاریخ انتخاب کنید</string>
    <string name="picker_date_header_unselected">یک تاریخ انتخاب کنید</string>
    <string name="picker_range_header_only_end_selected">تاریخ شروع – %1$s</string>
    <string name="picker_range_header_only_start_selected">%1$s – تاریخ پایان</string>
    <string name="picker_range_header_selected">%1$s – %2$s</string>
    <string name="picker_range_header_title">تاریخ را انتخاب کنید</string>
    <string name="picker_range_header_unselected">تاریخ شروع - تاریخ پایان</string>
    <string name="msg_no_customer">مشتری یافت نشد</string>
    <string name="msg_no_direction">مسیری یافت نشد</string>
    <string name="msg_no_product">محصولی یافت نشد</string>
    <string name="msg_no_data">آیتمی یافت نشد</string>
    <string name="msg_no_order">سفارشی یافت نشد</string>
    <string name="msg_sure_send_order">سفارش به صورت قطعی ثبت شود؟</string>
    <string name="msg_sure_send_orders">همه سفارشات ثبت شده به صورت قطعی ارسال شوند؟</string>
    <string name="msg_sure_delete_orders">آیا برای حذف اطمینان دارید؟</string>
    <string name="msg_log_out">    با خارج شدن از حساب کاربری تمامی اطلاعات ذخیره شده در دستگاه حذف خواهد شد آیا مایل به خروج از حساب کاربری خود می باشید؟</string>
    <string name="msg_success_login">ورود با موفقیت انجام شد.</string>
    <string name="msg_success_validate_credit">اعتبار سنجی با موفقیت انجام شد.</string>
    <string name="msg_success_update">بروزرسانی با موفقیت انجام شد.</string>
    <string name="msg_success_download">دریافت اطلاعات با موفقیت انجام شد.</string>
    <string name="msg_press_back_button_again_exit">برای خروج دوباره دکمه بازگشت را بزنید</string>
    <string name="msg_order_successfully_sent">سفارش با موفقیت ارسال شد</string>
    <string name="msg_cannot_go_back_warning">پس از زدن تیک ثبت ، امکان بازگشت به لیست محصولات وجود ندارد. برای ادامه کار، سفارش را ذخیره یا ارسال کنید.</string>
    <string name="msg_cannot_delete_when_completed">در حالت ثبت ، امکان حذف ردیف وجود ندارد. لطفاً ابتدا تیک ثبت را بردارید.</string>
    <string name="msg_select_direction">حداقل یک مسیر را انتخاب کنید</string>
    <string name="msg_location_access_required">دسترسی لوکیشن لازم است</string>
    <string name="msg_place_order_location_must_be_checked">
                برای ثبت سفارش، باید موقعیت مکانی شما بررسی شود تا مشخص شود در محدوده مشتری هستید یا خیر. " +
                        "لطفاً دسترسی لوکیشن را فعال کنید.</string>
    <string name="error_enter_address_server">آدرس سرور را وارد کنید</string>
    <string name="error_network_json_response">مشکل در دریافت اطلاعات از سرور</string>
    <string name="error_could_not_connect_server">ارتباط با سرور برقرار نشد</string>
    <string name="error_network_internet">اتصال اینترنت برقرار نیست</string>
    <string name="error_not_found">موردی یافت نشد</string>
    <string name="error_bad_request">درخواست نادرست بود</string>
    <string name="error_unauthorized">دسترسی غیرمجاز</string>
    <string name="error_forbidden">دسترسی ممنوع است</string>
    <string name="error_internal_server">خطای داخلی سرور</string>
    <string name="error_unknown">خطای ناشناخته رخ داده است</string>
    <string name="error_timeout">اتصال به سرور با تاخیر مواجه شد</string>
    <string name="error_no_customer">مشتری ای وجود ندارد</string>
    <string name="error_request_fields">لطفا تمام فیلدهارا پر کنید</string>
    <string name="error_request_amounts">لطفا مقدار وارد کنید</string>
    <string name="error_enter_password">رمز عبور را وارد کنید</string>
    <string name="error_enter_username">نام کاربری را وارد کنید</string>
    <string name="error_no_items_cart">هیچ آیتمی به سبد خرید اضافه نشده</string>
    <string name="error_user_not_found">کاربر یافت نشد</string>
    <string name="error_not_detail">جزییات سفارش یافت نشد</string>
    <string name="error_insufficient_inventory">موجودی انبار کافی نیست</string>
    <string name="error_out_of_stock">این کالا در انبار موجودی ندارد</string>
    <string name="error_selecting_invoice_category_mandatory">انتخاب گروه صورت حساب اجباری است</string>
    <string name="error_selecting_customer_direction">انتخاب مسیر مشتری اجباری است</string>
    <string name="error_selecting_pattern_mandatory">انتخاب طرح فروش اجباری است</string>
    <string name="error_location_service_must_turned_on">برای ثبت سفارش، باید سرویس مکان‌یابی گوشی روشن باشد. لطفاً GPS یا Location را روشن کنید و دوباره تلاش کنید.</string>
</resources>