<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackSurface">

    <!-- line header -->
    <com.partsystem.partvisitapp.core.utils.componenet.Header
        android:id="@+id/hfOrderList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:drawableImgTwoHeader="@drawable/ic_back"
        app:isShowImgTwoHeader="true"
        app:isShowSeparatorHeader="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:textTitleHeader="@string/label_orders" />

    <LinearLayout
        android:background="?attr/colorBox"
        android:id="@+id/tabsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/medium_size"
        android:paddingVertical="@dimen/small_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hfOrderList">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tabSent"
            style="@style/SmallBoldTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_tab_inactive"
            android:gravity="center"
            android:padding="@dimen/small_size"
            android:text="@string/label_sent_orders" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tabUnsent"
            style="@style/SmallBoldTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_size"
            android:layout_weight="1"
            android:background="@drawable/bg_tab_active"
            android:gravity="center"
            android:padding="@dimen/small_size"
            android:text="@string/label_unsent_orders" />

    </LinearLayout>

    <!-- NavHostFragment داخلی -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/reportFactorNavHost"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:defaultNavHost="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabsLayout"
        app:navGraph="@navigation/nav_report_factor" />

</androidx.constraintlayout.widget.ConstraintLayout>