<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackSurface">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/medium_size"
        android:layout_marginEnd="@dimen/medium_size"
        android:background="@drawable/selector_search_input"
        app:boxBackgroundMode="none"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/rvOrderList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSyncAllOrder"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSearch"
            style="@style/Input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:drawableEnd="@drawable/ic_search"
            android:drawablePadding="@dimen/x_small_size"
            android:gravity="center_vertical|start"
            android:hint="@string/label_order_search"
            android:padding="0dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.partsystem.partvisitapp.core.utils.componenet.BottomMain
        android:id="@+id/btnSyncAllOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:badgeTextColorBtnOne="?attr/colorOnPrimary"
        app:backColorBtnOne="@color/blue_283167"
        app:layout_constraintBottom_toBottomOf="@+id/tilSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tilSearch"
        app:textBtnOne="@string/label_sync_all_order" />

    <!-- line list -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvOrderList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="@dimen/xx_small_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilSearch"
        tools:itemCount="10"
        tools:listitem="@layout/item_order_list" />

    <!-- line info -->
    <com.partsystem.partvisitapp.core.utils.componenet.Info
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:translationZ="2dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilSearch"
        app:message="@string/msg_no_order" />

</androidx.constraintlayout.widget.ConstraintLayout>