<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackSurface">

    <!-- line header -->
    <com.partsystem.partvisitapp.core.utils.componenet.Header
        android:id="@+id/hfProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:drawableImgOneHeader="@drawable/ic_shopping_cart"
        app:drawableImgTwoHeader="@drawable/ic_back"
        app:isShowImgOneHeader="true"
        app:isShowImgTwoHeader="true"
        app:isShowSeparatorHeader="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:textTitleHeader="@string/label_product_catalog" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_size"
        android:background="@drawable/selector_search_input"
        app:boxBackgroundMode="none"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/rvProduct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hfProduct">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSearch"
            style="@style/Input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:drawableEnd="@drawable/ic_search"
            android:drawablePadding="@dimen/x_small_size"
            android:gravity="center_vertical|start"
            android:hint="@string/label_product_search"
            android:padding="0dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- line recyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProduct"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilSearch"
        tools:itemCount="5"
        tools:listitem="@layout/item_product" />

    <!-- line info -->
    <com.partsystem.partvisitapp.core.utils.componenet.Info
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:translationZ="2dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hfProduct"
        app:message="@string/msg_no_data" />

</androidx.constraintlayout.widget.ConstraintLayout>
